Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UWorld.h

	
	DOTNET_EXPORT auto E_PROP_UWorld_TickGroup_GET(UWorld* Ptr) { return Ptr->TickGroup; }
	DOTNET_EXPORT void E_PROP_UWorld_TickGroup_SET(UWorld* Ptr, ETickingGroup Value) { Ptr->TickGroup = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_TimeSeconds_GET(UWorld* Ptr) { return Ptr->TimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_TimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->TimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_UnpausedTimeSeconds_GET(UWorld* Ptr) { return Ptr->UnpausedTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_UnpausedTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->UnpausedTimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_URL_GET(UWorld* Ptr) { return (INT_PTR)&(Ptr->URL); }
	DOTNET_EXPORT void E_PROP_UWorld_URL_SET(UWorld* Ptr, INT_PTR Value) { Ptr->URL = *(FURL*)Value; }
	DOTNET_EXPORT auto E_UWorld_AddNetworkActor(UWorld* Self, AActor* Actor)
	{
		auto _p0 = Actor;
		Self->AddNetworkActor(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_AddPawn(UWorld* Self, APawn* Pawn)
	{
		auto _p0 = Pawn;
		Self->AddPawn(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_AllowLevelLoadRequests(UWorld* Self)
	{
		return Self->AllowLevelLoadRequests();
	}
	DOTNET_EXPORT auto E_UWorld_AreActorsInitialized(UWorld* Self)
	{
		return Self->AreActorsInitialized();
	}
	DOTNET_EXPORT auto E_UWorld_AreAlwaysLoadedLevelsLoaded(UWorld* Self)
	{
		return Self->AreAlwaysLoadedLevelsLoaded();
	}
	DOTNET_EXPORT auto E_UWorld_AsyncLoadAlwaysLoadedLevelsForSeamlessTravel(UWorld* Self)
	{
		Self->AsyncLoadAlwaysLoadedLevelsForSeamlessTravel();
	}
	DOTNET_EXPORT auto E_UWorld_AttemptDeriveFromURL(UWorld* Self)
	{
		return Self->AttemptDeriveFromURL();
	}
	DOTNET_EXPORT auto E_UWorld_BeginPlay(UWorld* Self)
	{
		Self->BeginPlay();
	}
	DOTNET_EXPORT auto E_UWorld_BroadcastLevelsChanged(UWorld* Self)
	{
		Self->BroadcastLevelsChanged();
	}
	DOTNET_EXPORT auto E_UWorld_BuildPIEPackagePrefix(UWorld* Self, int32 PIEInstanceID)
	{
		auto _p0 = PIEInstanceID;
		return ConvertToManage_StringWrapper(Self->BuildPIEPackagePrefix(_p0));
	}
	DOTNET_EXPORT auto E_UWorld_CancelPendingMapChange(UWorld* Self)
	{
		Self->CancelPendingMapChange();
	}
	DOTNET_EXPORT auto E_UWorld_CleanupActors(UWorld* Self)
	{
		Self->CleanupActors();
	}
	DOTNET_EXPORT auto E_UWorld_CleanupWorld(UWorld* Self, bool bSessionEnded, bool bCleanupResources, UWorld* NewWorld)
	{
		auto _p0 = bSessionEnded;
		auto _p1 = bCleanupResources;
		auto _p2 = NewWorld;
		Self->CleanupWorld(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UWorld_ClearActorComponentEndOfFrameUpdate(UWorld* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		Self->ClearActorComponentEndOfFrameUpdate(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_ClearWorldComponents(UWorld* Self)
	{
		Self->ClearWorldComponents();
	}
	DOTNET_EXPORT auto E_UWorld_CommitMapChange(UWorld* Self)
	{
		Self->CommitMapChange();
	}
	DOTNET_EXPORT auto E_UWorld_CommitModelSurfaces(UWorld* Self)
	{
		Self->CommitModelSurfaces();
	}
	DOTNET_EXPORT auto E_UWorld_ConditionallyBuildStreamingData(UWorld* Self)
	{
		Self->ConditionallyBuildStreamingData();
	}
	DOTNET_EXPORT auto E_UWorld_ContainsActor(UWorld* Self, AActor* Actor)
	{
		auto _p0 = Actor;
		return Self->ContainsActor(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_ConvertToPIEPackageName(UWorld* Self, char* PackageName, int32 PIEInstanceID)
	{
		auto _p0 = ConvertFromManage_FString(PackageName);
		auto _p1 = PIEInstanceID;
		return ConvertToManage_StringWrapper(Self->ConvertToPIEPackageName(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UWorld_CreateFXSystem(UWorld* Self)
	{
		Self->CreateFXSystem();
	}
	DOTNET_EXPORT auto E_UWorld_CreatePhysicsScene(UWorld* Self)
	{
		Self->CreatePhysicsScene();
	}
	DOTNET_EXPORT auto E_UWorld_DebugDrawSceneQueries(UWorld* Self, char* UsedTraceTag)
	{
		auto _p0 = ConvertFromManage_FName(UsedTraceTag);
		return Self->DebugDrawSceneQueries(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_DelayGarbageCollection(UWorld* Self)
	{
		Self->DelayGarbageCollection();
	}
	DOTNET_EXPORT auto E_UWorld_DelayStreamingVolumeUpdates(UWorld* Self, int32 InFrameDelay)
	{
		auto _p0 = InFrameDelay;
		Self->DelayStreamingVolumeUpdates(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_DestroyActor(UWorld* Self, AActor* Actor, bool bNetForce, bool bShouldModifyLevel)
	{
		auto _p0 = Actor;
		auto _p1 = bNetForce;
		auto _p2 = bShouldModifyLevel;
		return Self->DestroyActor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UWorld_DestroyDemoNetDriver(UWorld* Self)
	{
		Self->DestroyDemoNetDriver();
	}
	DOTNET_EXPORT auto E_UWorld_DestroyWorld(UWorld* Self, bool bInformEngineOfWorld, UWorld* NewWorld)
	{
		auto _p0 = bInformEngineOfWorld;
		auto _p1 = NewWorld;
		Self->DestroyWorld(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_DuplicateRequestedLevels(UWorld* Self, char* MapName)
	{
		auto _p0 = ConvertFromManage_FName(MapName);
		Self->DuplicateRequestedLevels(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_DuplicateWorldForPIE(UWorld* Self, char* PackageName, UWorld* OwningWorld)
	{
		auto _p0 = ConvertFromManage_FString(PackageName);
		auto _p1 = OwningWorld;
		return ConvertToManage_ObjectPointerDescription(Self->DuplicateWorldForPIE(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UWorld_EditorDestroyActor(UWorld* Self, AActor* Actor, bool bShouldModifyLevel)
	{
		auto _p0 = Actor;
		auto _p1 = bShouldModifyLevel;
		return Self->EditorDestroyActor(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_EncroachingBlockingGeometry(UWorld* Self, AActor* TestActor, INT_PTR TestLocation, INT_PTR TestRotation, INT_PTR ProposedAdjustment)
	{
		auto _p0 = TestActor;
		auto _p1 = *(FVector*)TestLocation;
		auto _p2 = *(FRotator*)TestRotation;
		auto _p3 = (FVector*)ProposedAdjustment;
		return Self->EncroachingBlockingGeometry(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UWorld_EnsureCollisionTreeIsBuilt(UWorld* Self)
	{
		Self->EnsureCollisionTreeIsBuilt();
	}
	DOTNET_EXPORT auto E_UWorld_FindCollectionIndexByType(UWorld* Self, ELevelCollectionType InType)
	{
		auto _p0 = InType;
		return Self->FindCollectionIndexByType(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_FindOrAddCollectionByType_Index(UWorld* Self, ELevelCollectionType InType)
	{
		auto _p0 = InType;
		return Self->FindOrAddCollectionByType_Index(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_FindTeleportSpot(UWorld* Self, AActor* TestActor, INT_PTR PlaceLocation, INT_PTR PlaceRotation)
	{
		auto _p0 = TestActor;
		auto _p1 = *(FVector*)PlaceLocation;
		auto _p2 = *(FRotator*)PlaceRotation;
		return Self->FindTeleportSpot(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UWorld_FinishPhysicsSim(UWorld* Self)
	{
		Self->FinishPhysicsSim();
	}
	DOTNET_EXPORT auto E_UWorld_FlushLevelStreaming(UWorld* Self, EFlushLevelStreamingType FlushType)
	{
		auto _p0 = FlushType;
		Self->FlushLevelStreaming(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_ForceGarbageCollection(UWorld* Self, bool bFullPurge)
	{
		auto _p0 = bFullPurge;
		Self->ForceGarbageCollection(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_GetActiveLevelCollectionIndex(UWorld* Self)
	{
		return Self->GetActiveLevelCollectionIndex();
	}
	DOTNET_EXPORT auto E_UWorld_GetActorCount(UWorld* Self)
	{
		return Self->GetActorCount();
	}
	DOTNET_EXPORT auto E_UWorld_GetAudioTimeSeconds(UWorld* Self)
	{
		return Self->GetAudioTimeSeconds();
	}
	DOTNET_EXPORT auto E_UWorld_GetDefaultGravityZ(UWorld* Self)
	{
		return Self->GetDefaultGravityZ();
	}
	DOTNET_EXPORT auto E_UWorld_GetDeltaSeconds(UWorld* Self)
	{
		return Self->GetDeltaSeconds();
	}
	DOTNET_EXPORT auto E_UWorld_GetDetailMode(UWorld* Self)
	{
		return Self->GetDetailMode();
	}
	DOTNET_EXPORT auto E_UWorld_GetGravityZ(UWorld* Self)
	{
		return Self->GetGravityZ();
	}
	DOTNET_EXPORT auto E_UWorld_GetMonoFarFieldCullingDistance(UWorld* Self)
	{
		return Self->GetMonoFarFieldCullingDistance();
	}
	DOTNET_EXPORT auto E_UWorld_GetNetMode(UWorld* Self)
	{
		return Self->GetNetMode();
	}
	DOTNET_EXPORT auto E_UWorld_GetNonDefaultPhysicsVolumeCount(UWorld* Self)
	{
		return Self->GetNonDefaultPhysicsVolumeCount();
	}
	DOTNET_EXPORT auto E_UWorld_GetNumLevels(UWorld* Self)
	{
		return Self->GetNumLevels();
	}
	DOTNET_EXPORT auto E_UWorld_GetNumPawns(UWorld* Self)
	{
		return Self->GetNumPawns();
	}
	DOTNET_EXPORT auto E_UWorld_GetProgressDenominator(UWorld* Self)
	{
		return Self->GetProgressDenominator();
	}
	DOTNET_EXPORT auto E_UWorld_GetRealTimeSeconds(UWorld* Self)
	{
		return Self->GetRealTimeSeconds();
	}
	DOTNET_EXPORT auto E_UWorld_GetTimeBetweenGarbageCollectionPasses(UWorld* Self)
	{
		return Self->GetTimeBetweenGarbageCollectionPasses();
	}
	DOTNET_EXPORT auto E_UWorld_GetTimeSeconds(UWorld* Self)
	{
		return Self->GetTimeSeconds();
	}
	DOTNET_EXPORT auto E_UWorld_GetUnpausedTimeSeconds(UWorld* Self)
	{
		return Self->GetUnpausedTimeSeconds();
	}
	DOTNET_EXPORT auto E_UWorld_HasBegunPlay(UWorld* Self)
	{
		return Self->HasBegunPlay();
	}
	DOTNET_EXPORT auto E_UWorld_HasDefaultPhysicsVolume(UWorld* Self)
	{
		return Self->HasDefaultPhysicsVolume();
	}